- Fixed issue #14185: Invalid docbook markup created for table cells in wiki
  visitor
- Fixed issue #14188: ezcDocumentEzXml::getAsDocbook() returns an
  ezcDocumentEzXml rather than ezcDocumentDocbook
- Fixed issue #14208: Invalid docubook markup: Attributes used in wrong case
- Fixed issue #14210: Docbook: literallayout class should be "normal" instead
  of "Normal"


1.1rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.1beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.1alpha1 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #12339: Add support for eZXml markup.
- Implemented feature #12340: Add support for wiki markup.
- Implemented feature #13083: Read and write XHTML format.
- Implemented feature #13084: Write RST format.
- Implemented feature #13322: Possibility to reference a stylesheet for use
  with XHTML output of reST documents.
- Fixed issue #13727: Autoenumerated enumerated lists parsed as paragraphs.


1.0.2 - Monday 04 August 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13326: Paragraph order mixed up with blockquotes in bullet
  lists.
- Fixed issue #13327: Emphasis closing node wrongly recognized as opening
  node.


1.0.1 - Tuesday 08 July 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13200: Problem with multiple headers with the same name, when
  generating table of contents in an rst document.
- Fixed issue #13220: Support for row seperators in simple table bodies
  missing.
- Fixed issue #13237: Whitespaces before single word named external
  references are skipped.
- Fixed issue #13238: Whitespaces at line ends, with markup as last element
  are skipped.