@@ -74,6 +74,9 @@ class ezcDocumentWikiDocbookVisitorTests extends ezcTestCase
         $docbook = $document->getAsDocbook();
         $xml = $docbook->save();
 
+        // Validate generated docbook
+        $this->assertTrue( $docbook->validateString( $xml ) );
+
         // Store test file, to have something to compare on failure
         $tempDir = $this->createTempDir( 'wiki_visitor_' . $type . '_' ) . '/';
         file_put_contents( $tempDir . basename( $to ), $xml );
