@@ -3,10 +3,12 @@
 <article xmlns="http://docbook.org/ns/docbook">
   <section ID="field_lists">
     <sectioninfo>
-      <pubdate> 2001-08-16
-</pubdate>
-      <author> Some guy.
-</author>
+      <date> 2001-08-16
+</date>
+      <releaseinfo> 1
+</releaseinfo>
+      <authors> Some guy.
+</authors>
     </sectioninfo>
     <title>Field lists</title>
   </section>
