@@ -4,17 +4,27 @@
   <section ID="all_known_directives">
     <sectioninfo/>
     <title>All known directives</title>
-    <note> Just a note!</note>
-    <tip> You might want to use these more!</tip>
-    <warning> Be careful about this!</warning>
-    <important> Do not overdo it!</important>
-    <caution> May have a bad impact on userexperience.</caution>
+    <note>
+      <para> Just a note!</para>
+    </note>
+    <tip>
+      <para> You might want to use these more!</para>
+    </tip>
+    <warning>
+      <para> Be careful about this!</para>
+    </warning>
+    <important>
+      <para> Do not overdo it!</para>
+    </important>
+    <caution>
+      <para> May have a bad impact on userexperience.</para>
+    </caution>
     <blockquote>
       <para>Lets get something colorful!</para>
     </blockquote>
     <mediaobject>
       <imageobject>
-        <imagedata fileref="test.png" width="256" depth="23" align=" right"/>
+        <imagedata fileref="test.png" width="256" depth="23" align="right"/>
       </imageobject>
       <textobject> Some alternative text.</textobject>
       <caption>
@@ -26,7 +36,7 @@
     </blockquote>
     <mediaobject>
       <imageobject>
-        <imagedata fileref="test.png" width="256" depth="23" align=" right"/>
+        <imagedata fileref="test.png" width="256" depth="23" align="right"/>
       </imageobject>
       <textobject> Some alternative text.</textobject>
     </mediaobject>
